# hwpx-skill

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_GUIDE.md  LICENSE-APACHE  LICENSE.md  Makefile  NOTICE  README.md  README_KO.md  TODO.md  form_editor.py  hwpx-skill_code_review_2026-04-05.md  hwpx.skill  pyproject.toml  template_builder.py
.bkit/: agent-state.json
.github/workflows/: tests.yml
.lifecycle/: manifest.json  state.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
api_server/: __init__.py  main.py
docs/: .bkit-memory.json  .pdca-status.json  HWPX_RULEBOOK.md  OWPML_TABLE_SIZING.md  convert_test.md  hangul-docs-web-architecture.md  hwpxlib-analysis.md  oracle-cloud-deployment.md  test_all_features.html  test_phase4.html
docs/.pdca-snapshots/: snapshot-1774648425732.json  snapshot-1774674023950.json
docs/03-analysis/: auto-schema-cellspan.analysis.md  cli-oneshot-autosave.analysis.md  compact-autofit.analysis.md  font-replacement.analysis.md  hancom-security-trigger-root-cause.analysis.md  hwpx-skill-upgrade.analysis.md  (+2 more)
examples/: 01_hello_world.py  02_styled_text.py  03_table.py  04_markdown_convert.py  05_html_convert.py  06_form_clone.py  07_read_extract.py  08_fill_template.py  09_llm_integration.py  10_merge_documents.py
hwp_samples/: 개인정보_수집이용_동의서.hwp  개정_표준근로계약서_2025.hwp  개정_표준취업규칙_2025.hwp  공공기관_서식한글_개발및보급계획.hwp  무급휴업_고용유지_계획서.hwp  비상연락망_양식.hwp  서약서_양식.hwp  소프트웨어사업_하도급_계획서.hwp  이력서_기본양식.hwp  자기소개서_양식.hwp  표준근로계약서_서식.hwp
license/: admin_cli.py  client.py  config.py  db.py  keygen.py  server.py
pyhwpxlib/: __init__.py  __main__.py  api.py  base.py  blueprint.py  builder.py  cli.py  converter.py  doctor.py  html_converter.py  html_to_hwpx.py  hwp2hwpx.py  hwp_reader.py  hwpx_file.py  llm_guide.py  object_type.py  package_ops.py  page_guard.py  presets.py  reader.py  rhwp_bridge.py  style_manager.py  themes.py  value_convertor.py  xml_ops.py
samples/: 3. 전정 Makers 프로젝트 중간,최종 결과보고서 양식.hwp
scripts/: bench_render.py  create.py  fill_opinion_form.py  fix_ai_report.py  generate_afc_q2_report.py  mcp_http_server.py  optimize_demo_report.py  pack.py  preview.py  unpack.py  update_license_date.py  validate.py
skill/: SKILL.md  chatgpt_hwpx_guide.md
templates/: TEMPLATE_REVERSE_REPORT.md  form_accuracy_test.py  form_pipeline.py  hwpx_generator.py  reverse_analysis.json
tests/: conftest.py  test_api_core.py  test_api_extended.py  test_api_server.py  test_api_shapes.py  test_auto_schema_cellspan.py  test_blueprint.py  test_check_fill.py  test_converter.py  test_diagnose.py  test_font_check.py  test_font_defaults.py  test_form_fill_golden.py  test_form_pipeline.py  test_form_pipeline_multirun.py  test_gongmun_autofit.py  test_html_converters.py  test_hwp2hwpx_bindata.py  test_hwp2hwpx_golden.py  test_hwp2hwpx_nested_table.py  test_hwpx_builder.py  test_json_schema_expansion.py  test_lineseg_reflow.py  test_object_model.py  test_overlay.py  test_page_guard.py  test_refactor.py  test_render_consistency.py  test_render_png.py  test_rhwp_bridge_extensions.py  test_rhwp_strict_mode.py  test_stability.py  test_style_manager.py  test_table_pagebreak.py  test_templates.py  test_text_measurer_cache.py  test_themes.py  test_visual_golden.py  test_workspace_persistence.py  test_writer_utils.py
(+213 files in other folders)
